--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,11 @@
     <div class="form-container flex justify-center gap-20 ">
         <form class="todo-form flex">
           <input type="text" class="todo-input w-80 h-8 rounded-md placeholder-zinc-300" />
-          <button class="add-todo ml-[-30px] " type="submit">
+          <button class="add-todo ml-[-30px]" type="submit" title="Add Todo">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="blue" class="w-7 h-7">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
-              </svg>
-          </button>  
+            </svg>
+        </button>         
         </form>
 
         <div class="select">
